pixi_ubuntu_fix2

--- a/mkdocs/site/index.html
+++ b/mkdocs/site/index.html
@@ -1099,9 +1099,7 @@
 </div>
 <hr />
 <h4 id="_2">パッケージ</h4>
-<ul>
-<li><code>lecture_nav2_bringup</code>:navigation2を学ぶためのlaunchファイル群</li>
-</ul>
+<p>TBA</p>
 <hr />
 <h2 id="_3">資料構成</h2>
 <ul>
