--- a/mkdocs/site/index.html
+++ b/mkdocs/site/index.html
@@ -1122,9 +1122,10 @@
 </ul>
 <hr />
 <h1 id="_4">お問い合わせ</h1>
-<p>資料に関するお問い合わせや開発相談は電話かメールで承ります。</p>
-<h2 id="91703-5530-2706">(平日9時ー17時)電話：03-5530-2706</h2>
+<p>資料に関するお問い合わせや開発相談はメールか電話で承ります。</p>
+<h2 id="_5">中村佳雅</h2>
 <h2 id="nakamurayoshimasairi-tokyojp">メール：nakamura.yoshimasa@iri-tokyo.jp</h2>
+<h2 id="_6">電話番号は<a href="https://www.iri-tokyo.jp/about/organization/headquarters-dx/robot/">このリンク先</a>の最下部にございます。中村をお呼び出しください。</h2>
 
 
 
