--- a/mkdocs/site/index.html
+++ b/mkdocs/site/index.html
@@ -1055,7 +1055,10 @@
 <p>本資料では、ロボット用ミドルウェアであるROS2 Humbleを用いてロボットの自律走行を体験します。   </p>
 <p>自律的なロボットのソフトウェアは、ロボットが認識、計画、動作を行う際に、多数のソフトウェアを並列的に実行する必要があります。<br />
 ロボット用ミドルウェアは、分割されたソフトウェアを、相互に通信させるための仕組みを提供するため、このような実行に際し、開発スピードを向上させるための重要なキーテクノロジーとなります。 <br />
-そのため、自律走行ロボットの開発には、商用利用可能なオープンソースであるROS2がよく使用されます。     </p>
+そのため、自律走行ロボットの開発には、商用利用可能なオープンソースであるROS2がよく使用されます。   <br />
+ROS2は有名アルゴリズムから最新研究までオープンソースで公開されており、その数は増え続けています。  </p>
+<p>自律走行ロボットの開発は、アルゴリズムを手元で動かすことで、非常に理解が捗ります。<br />
+現時点でROS2はSLAMや自律走行ロボットを開発するための最短の近道です。  </p>
 <hr />
 <h2 id="_1">事前準備</h2>
 <p>本資料ではOSはubuntu22.04、ROS2のバージョンはHumbleを推奨環境としています。<br />
